# SimpleMusicGenerator

./: .gitignore  .gitmodules  README.md  SimpleMusicGenerator.cpp
iOS/SimpleMusicGen/: SimpleMusicGen-ios-Bridging-Header.h
iOS/SimpleMusicGen/SimpleMusicGen/: AppDelegate.swift  MusicGenInterface.cpp  SceneDelegate.swift  SettingsController.swift  ViewController.swift  ViewControllers.swift
iOS/SimpleMusicGen/SimpleMusicGen-ios.xcodeproj/: project.pbxproj
iOS/SimpleMusicGen/SimpleMusicGen-ios.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
iOS/SimpleMusicGen/SimpleMusicGen-ios.xcodeproj/project.xcworkspace/xcuserdata/morgan.xcuserdatad/: UserInterfaceState.xcuserstate
iOS/SimpleMusicGen/SimpleMusicGen-ios.xcodeproj/xcuserdata/morgan.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
iOS/SimpleMusicGen/SimpleMusicGen-ios.xcodeproj/xcuserdata/morgan.xcuserdatad/xcschemes/: xcschememanagement.plist
iOS/SimpleMusicGen/SimpleMusicGen/Assets.xcassets/Keyboard.imageset/: Contents.json
iOS/SimpleMusicGen/SimpleMusicGen/Assets.xcassets/pixel art note.svg.imageset/: Contents.json
iOS/SimpleMusicGen/SimpleMusicGen/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
macos/: compile_osx.sh
macos/MusicGen/MusicGen-iOS/: MusicGen_iOS.swift  wrapper.cpp
macos/MusicGen/MusicGen.xcodeproj/: project.pbxproj
macos/MusicGen/MusicGen.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
macos/MusicGen/MusicGen.xcodeproj/project.xcworkspace/xcuserdata/morgan.xcuserdatad/: UserInterfaceState.xcuserstate
macos/MusicGen/MusicGen.xcodeproj/xcshareddata/xcschemes/: MusicGen.xcscheme
macos/MusicGen/MusicGen.xcodeproj/xcuserdata/morgan.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: AudioAndMusic.cpp  Bass.cpp  Drums.cpp  Generators.cpp  Lead.cpp  MusicGen.h  SimpleMusicGen.i  UtilFunctions.cpp  main.cpp  reverb.cpp  reverb.h
src/swig/: SimpleMusicGen.i  SimpleMusicGen.py  SimpleMusicGen_wrap.cpp  setup.py
web/: CMakeLists.txt  Doxy  MusicGenWASM.cpp  build.sh  build_manual.sh  build_win.bat  run.sh  shell-minimal.html
web/VoteTracker/: README.md  requirements.txt  run.sh  run_production.sh  schema.sql  test.py
web/VoteTracker/VoteTracker/: __init__.py  db.py
web/aws-elasticbeanstalk/: application.py  db.py  requirements.txt  scores.db
web/aws-elasticbeanstalk/.ebextensions/: static-files.config
web/aws-elasticbeanstalk/.platform/nginx/: nginx.conf
web/aws-elasticbeanstalk/start/: musicGenWASM.html  musicGenWASM.js  musicGenWASM.wasm
web/cmake/: FindSDL2.cmake  FindSDL2TTF.cmake  FindSDL2_IMAGE.cmake  FindSDL2_MIXER.cmake
web/mgsrc/: AudioAndMusic.cpp  Drums.cpp  Generators.cpp  MusicGen.h  UtilFunctions.cpp  main.cpp
web/sdlgui/: checkbox.h  colorwheel.h  common.cpp  common.h  imageview.h  nanort.h  switchbox.h  theme.cpp  vscrollpanel.cpp  vscrollpanel.h  vswrap.cpp  vswrap.h  window.cpp  window.h
win/: MusicGen.sln
win/MusicGen/: MusicGen.cpp  MusicGen.vcxproj  MusicGen.vcxproj.filters  Noise.txt  Sawtooth.txt  ScaleSine.txt  SineWave.txt  SineWaveFadeIn.txt  SineWaveFadeOut.txt  Square.txt  note.txt  scaleWave16.txt  snare.txt
